# devcontainer-example

./: CMakeLists.txt  CMakePresets.json
.devcontainer/: devcontainer.json
example_app/: CMakeLists.txt
example_lib/: CMakeLists.txt
example_target/: CMakeLists.txt
example_target/darwin/: CMakeLists.txt
example_target/embedded/: CMakeLists.txt  main.cpp
example_target/linux/: CMakeLists.txt
example_target/windows/: CMakeLists.txt
